--- a/locales/he.json
+++ b/locales/he.json
@@ -6,13 +6,27 @@
   "nav_work": "פרויקטים",
   "nav_contact": "צור קשר",
 
-  "home_title": "שלום,",
+  "home_title": "שלום!",
   "home_btn": "צפה בעבודות שלי",
-  "home_p1": "אני איליה איזנברג, מקצוען יצירתי מתמחה בפיתוח ווב. ברוכים הבאים לפורטפוליו שלי, בו אני מציג את המסע שלי בעולם הקידוד, היצירתיות ופתרון בעולם הדיגיטלי.",
+  "home_p1.1": "אני ",
+  "home_p1.2": "איליה איזנברג",
+  "home_p1.3": ", מקצוען יצירתי מתמחה בפיתוח ווב. ברוכים הבאים לפורטפוליו שלי, בו אני מציג את המסע שלי בעולם הקידוד, היצירתיות ופתרון בעולם הדיגיטלי.",
   "home_p2": "בין אם אתם כאן לשיתוף מקצועי או פשוט כדי לחקור, אני מזמין אתכם לסקור את הפרויקטים שלי, להיכרות עם הכישורים שלי ולגלות כיצד העבודה שלי יכולה ליצור שינוי בנוף הטכנולוגיה המתפתחת תמיד בעולם האינטרנט.",
 
-  "about_title": "אודות",
+  "about_title": "אודותי.",
+  "about_tag": "עוד קצת על מי אני ומה אני עושה...",
+  "about_p1": "אני מפתח דפי אינטרנט מתמחה ומתמקם בתחום יצירת חוויות משתמש מרשימות ויעילות. בעקרון של טכנולוגיות מודרניות ולמידה תמידית, אני מתמקד בהבאת פתרונות חדשניים לעולם הדיגיטלי. המסע שלי בפיתוח דפי אינטרנט החל למעלה מעשור בחזון עמוק לכיצד טכנולוגיות האינטרנט יכולות להפוך רעיונות למציאות.",
+  "about_p2": "כשאני לא בונה קוד, אני נהנה לנגן גיטרה, לשחק בשחמט, לצייר וללמוד דברים חדשים, שאני מאמין שתורמים ליצירתיותי וליכולתי לפתור בעיות בעבודה המקצועית שלי.",
   "about_btn": "אודות",
+
+  "skills_title": "כישורי",
+  "skills_tag": "הכלים והטכנולוגיות שבהם אני מתברר",
+  "skills_c1.1": "מומחה בפיתוח חזיתי",
+  "skills_c1.2": "יש לי הבנה עמוקה ומעמיקה בטכנולוגיות חזיתיות, כולל HTML, CSS, JavaScript ופריימוורקים מתקדמים כמו Vue.js ו-Nuxt. נחשב למפתח שמפתח ממשקי משתמש נגישים, מותאמים לכל מכשיר ואסתטיים. יש לי הוצאה מוכחת לשדרוג השימושיות והאסתטיקה של אתרי אינטרנט, מה שמביא לשיפורים משמעותיים בהתמודדות ושביעות רצון של המשתמשים.",
+  "skills_c2.1": "מעצב אוניקורן",
+  "skills_c2.2": "שילוב יוצא דופן של עיצוב דמיוני וכישורי קידוד טכניים. מפורסם ביוצר חוויות משתמש מקוריות וממוצעות מרהיבות. מומחה בתרגום של רעיונות פנטסטיים לפתרונות דיגיטליים נגישים וידידותיים למשתמשים. השילוב הייחודי של יצירתיות וכשרוני טכני מעמיד אותי בחזית החדשנות בעולם העיצוב הדיגיטלי.",
+  "skills_c3.1": "אסטרטג יחסי הפעולה של-AI",
+  "skills_c3.2": "בעל מיומנות מוכנה באמנות ובמדע של יצירת הוראות מדוייקות ויעילות עבור מערכות AI. מתמחה במיטוב של היחסים בין משתמשים ומערכות AI, הבטיח תקשורות חלקה, אינטואיטיבית ויעילה. עבודתי בתחום זה הפכה באופן קבוע את יעילות מערכות AI ושביעות רצון המשתמשים, מה שמדגיש את הבנה עמוקה ביכולות AI ובצרכי המשתמשים.",
 
   "work_title": "פרויקטים",
   "work_btn": "פרויקטים",
