--- a/locales/he.json
+++ b/locales/he.json
@@ -13,13 +13,13 @@
   "home_p1.3": ", מקצוען יצירתי מתמחה בפיתוח ווב. ברוכים הבאים לפורטפוליו שלי, בו אני מציג את המסע שלי בעולם הקידוד, היצירתיות ופתרון בעולם הדיגיטלי.",
   "home_p2": "בין אם אתם כאן לשיתוף מקצועי או פשוט כדי לחקור, אני מזמין אתכם לסקור את הפרויקטים שלי, להיכרות עם הכישורים שלי ולגלות כיצד העבודה שלי יכולה ליצור שינוי בנוף הטכנולוגיה המתפתחת תמיד בעולם האינטרנט.",
 
-  "about_title": "אודותי.",
-  "about_tag": "עוד קצת על מי אני ומה אני עושה...",
+  "about_title": "אודותי:",
+  "about_tag": "עוד קצת על מי אני ומה אני עושה.",
   "about_p1": "אני מפתח דפי אינטרנט מתמחה ומתמקם בתחום יצירת חוויות משתמש מרשימות ויעילות. בעקרון של טכנולוגיות מודרניות ולמידה תמידית, אני מתמקד בהבאת פתרונות חדשניים לעולם הדיגיטלי. המסע שלי בפיתוח דפי אינטרנט החל למעלה מעשור בחזון עמוק לכיצד טכנולוגיות האינטרנט יכולות להפוך רעיונות למציאות.",
   "about_p2": "כשאני לא בונה קוד, אני נהנה לנגן גיטרה, לשחק בשחמט, לצייר וללמוד דברים חדשים, שאני מאמין שתורמים ליצירתיותי וליכולתי לפתור בעיות בעבודה המקצועית שלי.",
   "about_btn": "אודות",
 
-  "skills_title": "כישורי",
+  "skills_title": "כישורי:",
   "skills_tag": "הכלים והטכנולוגיות שבהם אני מתברר",
   "skills_c1.1": "מומחה בפיתוח חזיתי",
   "skills_c1.2": "יש לי הבנה עמוקה ומעמיקה בטכנולוגיות חזיתיות, כולל HTML, CSS, JavaScript ופריימוורקים מתקדמים כמו Vue.js ו-Nuxt. נחשב למפתח שמפתח ממשקי משתמש נגישים, מותאמים לכל מכשיר ואסתטיים. יש לי הוצאה מוכחת לשדרוג השימושיות והאסתטיקה של אתרי אינטרנט, מה שמביא לשיפורים משמעותיים בהתמודדות ושביעות רצון של המשתמשים.",
@@ -28,9 +28,19 @@
   "skills_c3.1": "אסטרטג יחסי הפעולה של-AI",
   "skills_c3.2": "בעל מיומנות מוכנה באמנות ובמדע של יצירת הוראות מדוייקות ויעילות עבור מערכות AI. מתמחה במיטוב של היחסים בין משתמשים ומערכות AI, הבטיח תקשורות חלקה, אינטואיטיבית ויעילה. עבודתי בתחום זה הפכה באופן קבוע את יעילות מערכות AI ושביעות רצון המשתמשים, מה שמדגיש את הבנה עמוקה ביכולות AI ובצרכי המשתמשים.",
 
+  "testimonials_title": "המלצות:",
+  "testimonials_tag": "מה אנשים אומרים על עבודתי.",
+  "testimonials_p1": "\"העבודה של איליה בפרויקט האינטרנט שלנו הייתה מצוינת. התשומת לב לפרטים והגישה החדשנית היו בדיוק מה שהיינו זקוקים לה.\"",
+  "testimonials_p2": "– מיכאל עמר, בני אדם",
+
+  "cta_title": "בואו נעבוד יחד",
+  "cta_tag": "מעוניינים לשתף פעולה או ללמוד עוד על שירותי העבודה שלי?",
+
   "work_title": "פרויקטים",
   "work_btn": "פרויקטים",
 
   "contact_title": "צור קשר",
-  "contact_btn": "צור קשר"
+  "contact_btn": "צור קשר",
+
+  "footer_txt": "2024 איליה איזנברג. כל הזכויות שמורות."
 }
