--- a/locales/he.json
+++ b/locales/he.json
@@ -37,9 +37,11 @@
   "cta_tag": "מעוניינים לשתף פעולה או ללמוד עוד על שירותי העבודה שלי?",
 
   "work_title": "פרויקטים",
+  "work_p1": "פרויקטים",
   "work_btn": "פרויקטים",
 
   "contact_title": "צור קשר",
+  "contact_p1": "צור קשר",
   "contact_btn": "צור קשר",
 
   "footer_txt": "2024 איליה איזנברג. כל הזכויות שמורות."
