--- a/locales/en.json
+++ b/locales/en.json
@@ -10,7 +10,7 @@
   "home_btn": "View My Works",
   "home_p1.1": "I'm ",
   "home_p1.2": "Ilya Aizenberg",
-  "home_p1.3": ", a creative professional specialized in Web Development. Welcome to my portfolio where I showcase my journey through coding, creativity, and problem-solving in the digital world.",
+  "home_p1.3": "— a creative professional specialized in Web Development. Welcome to my portfolio where I showcase my journey through coding, creativity, and problem-solving in the digital world.",
   "home_p2": "Whether you're here for professional collaboration or just to explore, I invite you to take a look at my projects, learn about my skills, and discover how my work can make a difference in the ever-evolving landscape of web technology.",
 
   "about_title": "About me:",
