--- a/locales/he.json
+++ b/locales/he.json
@@ -10,7 +10,7 @@
   "home_btn": "צפה בעבודות שלי",
   "home_p1.1": "אני ",
   "home_p1.2": "איליה איזנברג",
-  "home_p1.3": ", מקצוען יצירתי מתמחה בפיתוח ווב. ברוכים הבאים לפורטפוליו שלי, בו אני מציג את המסע שלי בעולם הקידוד, היצירתיות ופתרון בעולם הדיגיטלי.",
+  "home_p1.3": "— מקצוען יצירתי מתמחה בפיתוח ווב. ברוכים הבאים לפורטפוליו שלי, בו אני מציג את המסע שלי בעולם הקידוד, היצירתיות ופתרון בעולם הדיגיטלי.",
   "home_p2": "בין אם אתם כאן לשיתוף מקצועי או פשוט כדי לחקור, אני מזמין אתכם לסקור את הפרויקטים שלי, להיכרות עם הכישורים שלי ולגלות כיצד העבודה שלי יכולה ליצור שינוי בנוף הטכנולוגיה המתפתחת תמיד בעולם האינטרנט.",
 
   "about_title": "אודותי:",
